--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = katomic
 url = https://download.kde.org/stable/release-service/20.04.2/src/katomic-20.04.2.tar.xz
 archives = 
-giturl = https://anongit.kde.org/katomic.git
+giturl = https://invent.kde.org/games/katomic.git
 domain = 
 alias = 
 
