--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = katomic
-url = https://download.kde.org/stable/release-service/22.04.3/src/katomic-22.04.3.tar.xz
+url = https://download.kde.org/stable/release-service/22.08.0/src/katomic-22.08.0.tar.xz
 archives = 
 giturl = https://invent.kde.org/games/katomic.git
 domain = 
@@ -62,5 +62,5 @@ use_clang = false
 # configure build for lto
 use_lto = true
 # require package verification for build
-verify_required = true
+verify_required = false
 
